feat: add CSS and JS minification to build process
Added automatic minification of CSS and JS files during packaging
to reduce file sizes and improve page load performance.

Changes:
1. package.sh: Add minification step
   - Minify calendar.css → calendar.min.css (13K → 11K, 15% reduction)
   - Minify calendar.js → calendar.min.js (23K → 12K, 48% reduction)
   - Uses sed for basic minification (remove comments, whitespace, newlines)
2. gcal-availability.php: Use minified files in production
   - Check SCRIPT_DEBUG constant
   - Load .min files by default
   - Load regular files when SCRIPT_DEBUG is true (for development)
3. .gitignore: Ignore generated minified files
   - *.min.css and *.min.js are build artifacts

Benefits:
- 48% smaller JS file (23K → 12K)
- 15% smaller CSS file (13K → 11K)
- Faster page loads for end users
- Developers can still debug with SCRIPT_DEBUG

To enable debug mode in wp-config.php:
define('SCRIPT_DEBUG', true);

Version bumped to 2.3.0

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ yarn-error.log*
 *.zip
 *.tar.gz
 
+# Generated/minified files
+assets/css/*.min.css
+assets/js/*.min.js
+
 # Temporary files
 *.tmp
 *.bak
